<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_dashboard"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.relaxhub.frontend.ui.dashboard.HomeFragment"
        android:label="@string/nav_home" />

    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.relaxhub.frontend.ui.dashboard.MapsFragment"
        android:label="@string/nav_maps" />

    <fragment
        android:id="@+id/accountFragment"
        android:name="com.relaxhub.frontend.ui.dashboard.AccountFragment"
        android:label="@string/nav_account" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.relaxhub.frontend.ui.dashboard.SettingsFragment"
        android:label="@string/nav_settings" />

</navigation>
