<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/mapContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/spotFilterGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginStart="@dimen/padding_screen"
        android:layout_marginEnd="@dimen/padding_screen"
        android:background="@drawable/bg_map_filter_bar"
        android:paddingStart="@dimen/spacing_sm"
        android:paddingTop="@dimen/spacing_sm"
        android:paddingEnd="@dimen/spacing_sm"
        android:paddingBottom="@dimen/spacing_sm"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/filterAllChip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/filter_all_spots" />

        <com.google.android.material.chip.Chip
            android:id="@+id/filterRestaurantChip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_restaurants" />

        <com.google.android.material.chip.Chip
            android:id="@+id/filterRelaxationChip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_relaxation" />

    </com.google.android.material.chip.ChipGroup>

</FrameLayout>
